[workspace]
members = [
    "crates/roblox-rs",
    "crates/roblox-dump",
    "crates/codegen",
    "crates/stream"
]

[profile.dev]
# optimize for size even on dev to prevent excessive locals
opt-level = "z"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
opt-level = "z"
