[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stream = { path = "../stream" }
roblox-dump = { path = "../roblox-dump" }
lazy_static = "1.4"
convert_case = "0.5"

[features]
multivalue = []
deprecated_apis = []
