[package]
name = "roblox-rs"
version = "0.1.0"
authors = ["Firebolt <24422634+Fireboltofdeath@users.noreply.github.com>"]
edition = "2018"
build = "./build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Smaller allocator
wee_alloc = { version = "0.4.5" }

[build_dependencies]
serde = { version = "1.0", features = ["derive"] }
roblox-dump = { path = "../roblox-dump" }
codegen = { path = "../codegen" }
serde_json = "1.0"
serde_with = "1.14.0"
convert_case = "0.5"
lazy_static = "1.4"
chrono = "0.4"

[features]
default = ["multivalue"]
multivalue = ["codegen/multivalue"]
deprecated_apis = ["codegen/deprecated_apis"]
